compile-clj fix